kubernetes/monitoring/01-01-deployment-curator.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: curator
  namespace: monitoring
  labels:
    k8s-app: curator
    namespace: monitoring
    dependency: elastic
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: curator
        namespace: monitoring
        dependency: elastic
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: curator
          image: registry.clickyab.ae/registry/curator
