kubernetes/monitoring/05-00-deployment-mysql-slave-monitor.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mysql-slave-monitor
  labels:
    k8s-app: mysql-slave-monitor
  namespace: monitoring
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: mysql-slave-monitor
    spec:
      terminationGracePeriodSeconds: 60
      imagePullSecrets:
        - name: regsecret
      containers:
      - name: mysql-slave-monitor
        image: registry.clickyab.ae/clickyab/cluster-tools:master.12
        command: [ "/app/bin/slavemonitor"]
        resources:
          limits:
            cpu: 100m
            memory: 30Mi
          requests:
            cpu: 10m
            memory: 20Mi
