kubernetes/monitoring/11-00-daemonset-monitoring-agent.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: monitoring-agent
  namespace: monitoring
  labels:
    tier: monitoring
    app: monitoring-agent
    version: v1
spec:
  template:
    metadata:
      labels:
        name: monitoring
    spec:
      hostPID: true
      hostIPC: true
      hostNetwork: true
      imagePullSecrets:
        - name: regsecret
      containers:
        - resources:
            requests:
              cpu: 0.15
          securityContext:
            privileged: true
          image: registry.clickyab.ae/clickyab/netdata-builtin:latest
          name: netdata
          volumeMounts:
            - name: proc
              mountPath: /host/proc
              readOnly: true
            - name: run
              mountPath: /var/run/docker.sock
            - name: sys
              mountPath: /host/sys
            - name: cache
              mountPath: /var/cache/netdata
      volumes:
        - name: proc
          hostPath:
              path: /proc
        - name: run
          hostPath:
              path: /var/run/docker.sock
        - name: sys
          hostPath:
              path: /sys
        - name: cache
          hostPath:
              path: /global/netdata/cache
