kubernetes/monitoring/11-deployment-kibana.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  # This name uniquely identifies the Deployment
  name: kibana
  namespace: monitoring
spec:
  strategy:
    type: RollingUpdate
  replicas: 1
  template:
    metadata:
      labels:
        # Label is used as selector in the service.
        app: kibana
        proc: webserver
        k8s-app: kibana-monitoring
        branch: master
    spec:
      containers:
      - name: kibana
        image: docker.elastic.co/kibana/kibana:5.5.2
