kubernetes/monitoring/5-0-Deployment-mysql-slave-monitor.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    k8s-app: mysql-slave-monitor
  name: mysql-slave-monitor
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: mysql-slave-monitor
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        k8s-app: mysql-slave-monitor
    spec:
      containers:
      - command:
        - /app/bin/slavemonitor
        image: registry.clickyab.ae/clickyab/cluster-tools_master:36
        imagePullPolicy: IfNotPresent
        name: mysql-slave-monitor
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: regsecret
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 60
