kubernetes/monitoring/03-1-slavemon-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: slavemon-service
  namespace: monitoring
  labels:
    k8s-app: slavemon
    kubernetes.io/cluster-service: "true"
    kubernetes.io/name: "SlavemonService"
spec:
  selector:
    k8s-app: mysql-slave-monitor
  ports:
  - name: slavemon
    targetPort: 8090
    port: 8090
    protocol: TCP
