kubernetes/monitoring/06-ceph-dash-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ceph-dash-service
  namespace: monitoring
  labels:
    k8s-app: ceph-dashboard
spec:
  selector:
    k8s-app: ceph-dashboard
  ports:
    - name: ceph-dash
      port: 5000
      protocol: TCP
