kubernetes/monitoring/04-01-ingress-slavemon.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: slavemon-ingress
  namespace: monitoring
spec:
  rules:
  - host: mscheck.clickyab.ae
    http:
      paths:
      - backend:
          serviceName: slavemon-service
          servicePort: 9000
        path: /
