kubernetes/monitoring/07-00-ingress-slavemon-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: slavemon-ingress
  namespace: monitoring
spec:
  rules:
  - host: mscheck.clickyab.ae
    http:
      paths:
      - path: /
        backend:
          serviceName: slavemon-service
          servicePort: 9000
