kubernetes/monitoring/13-kibana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: monitoring
#  annotations:
#    # type of authentication
#    ingress.kubernetes.io/auth-type: basic
#    # name of the secret that contains the user/password definitions
#    ingress.kubernetes.io/auth-secret: basic-auth
#    # message to display with an appropiate context why the authentication is required
#    ingress.kubernetes.io/auth-realm: "Authentication Required"
#    ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
  - host: kibana.clickyab.ae
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana-service
          servicePort: 5601
